# PyOncoplot

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: api-reference.md  data-inputs.md  development.md  example-plot-source-citations.md  gallery.md  index.md  installation.md  metadata-and-tmb.md  migration-from-ggoncoplot.md  options-reference.md  palettes.md  pathways-and-sorting.md  quickstart.md  rendering-backends.md  troubleshooting.md
docs/examples/: basic.md  brca-gallery.md  metadata.md  structural-variation-panel.md
python_refactor_goal_sources/: __init__.py  config.yaml  generate_synthetic_inputs.py  make_oncoplots.py  make_other_gallery_plots.py  recreate_gallery.py  source_info_for_training.md
python_refactor_goal_sources/fuc_sources/: manifest.json  oncoplot.py  rebuild_fuc_fixtures.py  vcf_sv.py
python_refactor_goal_sources/syntheitic_goal_data/: aml_gallery_params.json  aml_metadata.tsv  aml_mutations.tsv  aml_palette.json  aml_tmb.tsv  brca_metadata.tsv  brca_mutations.tsv  brca_palette.json  brca_tmb.tsv  cssc_mutations.tsv  cssc_palette.json  cssc_tmb.tsv  gbm_clinical_tracks.tsv  gbm_events.tsv  gbm_palette.json  ggoncoplot_comparison_table.tsv  ggoncoplot_readme_metadata.tsv  ggoncoplot_readme_mutations.tsv  ggoncoplot_readme_palette.json  ggoncoplot_readme_tmb.tsv  paper_multimodal_clinical.tsv  paper_multimodal_events.tsv  paper_multimodal_palette.json  paper_multimodal_points.tsv  paper_multimodal_samples.tsv  sv_depth.tsv  (+3 more)
tests/: test_data.py  test_docs.py  test_gallery.py  test_palette.py  test_params.py  test_rendering.py
(+13 files in other folders)
